--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
         "migrate:deploy": "prisma migrate deploy",
         "db:generate": "prisma generate",
         "db:studio": "prisma studio",
-        "test": "jest",
+        "test": "jest --runInBand",
         "test:watch": "jest --watch",
+        "test:coverage": "jest --coverage",
         "lint": "eslint src --ext .ts",
-        "format": "prettier --write \"src/**/*.ts\""
+        "format": "prettier --write \"src/**/*.ts\"",
+        "docker:build": "docker build -t motopay-api .",
+        "docker:run": "docker-compose up",
+        "docker:down": "docker-compose down"
     },
     "keywords": [
         "motopay",
@@ -34,10 +38,12 @@
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-rate-limit": "^7.1.5",
+        "firebase-admin": "^12.0.0",
         "helmet": "^7.1.0",
         "joi": "^17.11.0",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
+        "multer": "^1.4.5-lts.1",
         "node-cron": "^3.0.3",
         "nodemailer": "^6.9.7",
         "pdfkit": "^0.13.0",
@@ -48,25 +54,32 @@
         "winston": "^3.11.0"
     },
     "devDependencies": {
+        "@jest/globals": "^29.7.0",
         "@types/bcrypt": "^5.0.2",
         "@types/cors": "^2.8.17",
         "@types/csurf": "^1.11.5",
         "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.11",
         "@types/jsonwebtoken": "^9.0.5",
         "@types/morgan": "^1.9.9",
+        "@types/multer": "^1.4.11",
         "@types/node": "^20.10.6",
         "@types/node-cron": "^3.0.11",
         "@types/nodemailer": "^6.4.14",
         "@types/pdfkit": "^0.13.0",
+        "@types/supertest": "^6.0.2",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
         "@typescript-eslint/parser": "^6.16.0",
         "eslint": "^8.56.0",
+        "jest": "^29.7.0",
         "nodemon": "^3.0.2",
         "prettier": "^3.1.1",
         "prisma": "^5.8.0",
+        "supertest": "^6.3.3",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     },
