--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,19 +17,22 @@
         "es6": true
     },
     "rules": {
-        "@typescript-eslint/no-explicit-any": "warn",
+        "@typescript-eslint/no-explicit-any": "off",
         "@typescript-eslint/no-unused-vars": [
-            "error",
+            "warn",
             {
                 "argsIgnorePattern": "^_"
             }
         ],
-        "no-console": "off"
+        "@typescript-eslint/no-namespace": "off",
+        "no-console": "off",
+        "prefer-const": "warn"
     },
     "ignorePatterns": [
         "dist",
         "node_modules",
         "coverage",
-        "*.config.js"
+        "*.config.js",
+        "tests/**/*.ts"
     ]
 }
