fix: Stabilize CI/CD environment variables for tests
- Skipped strict env validation in config/index.ts during tests
- Added mock env variables to GitHub Actions workflow
- Explicitly set NODE_ENV: test in CI pipeline

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -54,6 +54,9 @@ jobs:
           DATABASE_URL: postgresql://postgres:postgres@localhost:5432/motopay_test
           JWT_SECRET: test-secret
           REFRESH_TOKEN_SECRET: test-refresh-secret
+          PAYSTACK_SECRET_KEY: test-paystack-key
+          ADMIN_PASSWORD: test-admin-password
+          NODE_ENV: test
 
   build:
     runs-on: ubuntu-latest
