fix: Resolve Jest open handle and hanging server issues
- Prevented app.listen from running during tests in src/app.ts
- Added --forceExit to jest script in package.json for CI stability

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "migrate:deploy": "prisma migrate deploy",
         "db:generate": "prisma generate",
         "db:studio": "prisma studio",
-        "test": "jest --runInBand",
+        "test": "jest --runInBand --forceExit",
         "test:watch": "jest --watch",
         "test:coverage": "jest --coverage",
         "lint": "eslint src --ext .ts",
