feat: migrate to SQLite and update schema
- Migrate database from PostgreSQL to SQLite for development
- Add new migration with updated schema
- Update auth middleware for better error handling
- Update exception, payment, and search services
- Update .env.example with SQLite configuration

--- a/.env.example
+++ b/.env.example
@@ -38,8 +38,8 @@ AWS_SECRET_ACCESS_KEY=your_secret_access_key
 AWS_S3_BUCKET=motopay-documents
 AWS_REGION=us-east-1
 
-# Frontend URL
-FRONTEND_URL=http://localhost:3000
+# Frontend URL (Vite dev server uses port 5173 by default)
+FRONTEND_URL=http://localhost:5173
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
