fix: update .env.example with SQLite DATABASE_URL format
- Change DATABASE_URL from PostgreSQL to SQLite format with file: protocol
- Add comments explaining SQLite vs PostgreSQL options
- Fixes Prisma validation error P1012 in CI/CD environments

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,11 @@ NODE_ENV=development
 PORT=5000
 API_VERSION=v1
 
-# Database
-DATABASE_URL=postgresql://user:password@localhost:5432/motopay
+# Database (SQLite for development, PostgreSQL for production)
+# For SQLite (local development):
+DATABASE_URL="file:./dev.db"
+# For PostgreSQL (production):
+# DATABASE_URL=postgresql://user:password@localhost:5432/motopay
 REDIS_URL=redis://localhost:6379
 
 # JWT Authentication
