docs: add production deployment guide and environment examples
- Add comprehensive DEPLOYMENT.md with Vercel setup instructions
- Update .env.example with production configuration examples
- Document database setup options (Vercel Postgres, external, SQLite)
- Include CORS configuration and security best practices

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,8 @@ API_VERSION=v1
 DATABASE_URL="file:./dev.db"
 # For PostgreSQL (production):
 # DATABASE_URL=postgresql://user:password@localhost:5432/motopay
+# For Vercel Postgres:
+# DATABASE_URL=<get_from_vercel_postgres_dashboard>
 REDIS_URL=redis://localhost:6379
 
 # JWT Authentication
@@ -42,7 +44,10 @@ AWS_S3_BUCKET=motopay-documents
 AWS_REGION=us-east-1
 
 # Frontend URL (Vite dev server uses port 5173 by default)
+# Development:
 FRONTEND_URL=http://localhost:5173
+# Production (set in Vercel):
+# FRONTEND_URL=https://moto-pay.vercel.app
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
